# TensorInfoCollector

./: CMakeLists.txt  README.md  main.cpp
tensor-info-collector/: CMakeLists.txt  main.cpp
test-files/: file1.mlir  file2.mlir  results1.json  results2.json
